fixed gallery card gap

--- a/styles.css
+++ b/styles.css
@@ -150,7 +150,7 @@ main {
   height: 25rem;
   display: flex;
   flex-direction: column;
-  gap: 0.6rem;
+  gap: 1.4rem;
   padding: 3.2rem;
   border-radius: 0.8rem;
   background-color: var(--white);
